--- a/pet_management/App.config
+++ b/pet_management/App.config
@@ -74,7 +74,7 @@
       </setting>
     </DevExpress.LookAndFeel.Design.AppSettings>
   </applicationSettings>
-  <startup>
+  <startup useLegacyV2RuntimeActivationPolicy="true">
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <runtime>
